<resources>
    <string name="app_name">first-android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Back</string>
    <string name="login">Log In</string>

    <string name="hello_first_fragment">Hello good people!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeLoggedUser">Hello, good people!</string>
    <string name="logout">Log Out</string>
    <string name="form_submission">Form Submission</string>
    <string name="submit_form_btn">Submit</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>